--- a/color_detection.html
+++ b/color_detection.html
@@ -7,6 +7,7 @@
     #video {
       display: block;
       margin: 20px 0;
+      transform: scaleX(-1); /* Flip the video horizontally for better user experience */
     }
     #canvas {
       display: block;
@@ -28,7 +29,14 @@
       const ctx = canvas.getContext('2d');
       let lastDetectionTime = 0;
 
-      navigator.mediaDevices.getUserMedia({ video: true })
+      // Constraints to access the back camera
+      const constraints = {
+        video: {
+          facingMode: 'environment', // Use the back camera
+        },
+      };
+
+      navigator.mediaDevices.getUserMedia(constraints)
         .then((stream) => {
           video.srcObject = stream;
         })
@@ -38,7 +46,7 @@
 
       // Function to play an audio file
       function playAudio() {
-        const audio = new Audio('https://raw.githubusercontent.com/ylo2403/color-detection/main/beep.mp3');
+        const audio = new Audio('https://raw.githubusercontent.com/your-github-username/your-repository/your-audio-file.mp3');
         audio.play();
       }
 
