--- a/color_detection.html
+++ b/color_detection.html
@@ -44,10 +44,23 @@
           console.error('Error accessing the camera:', error);
         });
 
-      // Function to play an audio file
-      function playAudio() {
+      // Function to play the beep sound
+      function playBeepSound() {
         const audio = new Audio('https://raw.githubusercontent.com/ylo2403/color-detection/main/beep.mp3');
         audio.play();
+      }
+
+      // Function to show a green notification
+      function showGreenNotification() {
+        if (Notification.permission === 'granted') {
+          new Notification('CosmScanner', { body: 'Successfully scanned the ticket!', icon: 'green-icon.png' });
+        } else if (Notification.permission !== 'denied') {
+          Notification.requestPermission().then((permission) => {
+            if (permission === 'granted') {
+              new Notification('CosmScanner', { body: 'Successfully scanned the ticket!', icon: 'green-icon.png' });
+            }
+          });
+        }
       }
 
       video.addEventListener('play', () => {
@@ -71,7 +84,8 @@
               // Adjust these values based on your specific shade of red
               if (red > 200 && green < 100 && blue < 100) {
                 console.log('Color detected: Red');
-                playAudio(); // Play audio when red is detected
+                playBeepSound(); // Play beep sound when red is detected
+                showGreenNotification(); // Show green notification on successful scan
                 lastDetectionTime = currentTime;
                 break;
               }
