--- a/color_detection.html
+++ b/color_detection.html
@@ -65,7 +65,84 @@
   <div id="notification-bar"></div>
 
   <script>
-    // ... (the JavaScript part remains unchanged)
+    document.addEventListener('DOMContentLoaded', () => {
+      const video = document.getElementById('video');
+      const canvas = document.getElementById('canvas');
+      const ctx = canvas.getContext('2d');
+      const notificationBar = document.getElementById('notification-bar');
+      let lastDetectionTime = 0;
+
+      // Constraints to access the back camera
+      const constraints = {
+        video: {
+          facingMode: 'environment', // Use the back camera
+        },
+      };
+
+      navigator.mediaDevices.getUserMedia(constraints)
+        .then((stream) => {
+          video.srcObject = stream;
+        })
+        .catch((error) => {
+          console.error('Error accessing the camera:', error);
+        });
+
+      // Function to play the beep sound
+      function playBeepSound() {
+        const audio = new Audio('https://raw.githubusercontent.com/ylo2403/color-detection/main/beep.mp3');
+        audio.play();
+      }
+
+      // Function to show a custom notification
+      function showCustomNotification(text) {
+        notificationBar.textContent = text;
+        notificationBar.style.top = '10px'; /* Adjusted top position for better visibility */
+        setTimeout(() => {
+          notificationBar.style.top = '-50px'; // Slide back up after 5 seconds
+        }, 5000);
+      }
+
+      video.addEventListener('play', () => {
+        function detectWhiteColor() {
+          const currentTime = Date.now();
+          const elapsedTimeSinceLastDetection = currentTime - lastDetectionTime;
+
+          if (elapsedTimeSinceLastDetection >= 5000) {
+            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+            // Get pixel data from the canvas
+            const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+            const data = imageData.data;
+
+            // Loop through pixels and check for white color
+            let isWhiteDetected = true;
+            for (let i = 0; i < data.length; i += 4) {
+              const red = data[i];
+              const green = data[i + 1];
+              const blue = data[i + 2];
+
+              // Adjust these values based on your specific shade of white
+              if (red < 200 || green < 200 || blue < 200) {
+                isWhiteDetected = false;
+                break;
+              }
+            }
+
+            if (isWhiteDetected) {
+              console.log('Color detected: White');
+              playBeepSound(); // Play beep sound when white is detected
+              const notificationText = 'Successfully detected the color white!';
+              showCustomNotification(notificationText); // Show custom notification on successful white detection
+              lastDetectionTime = currentTime;
+            }
+          }
+
+          requestAnimationFrame(detectWhiteColor);
+        }
+
+        detectWhiteColor();
+      });
+    });
   </script>
 </body>
 </html>
