--- a/color_detection.html
+++ b/color_detection.html
@@ -210,7 +210,7 @@
             if (isRedDetected) {
               console.log('Color detected: Red');
               playBeepSound();
-              const notificationText = 'Successfully detected the color red!';
+              const notificationText = 'CosmOS: Successfully scanned the ticket.';
               showCustomNotification(notificationText);
               lastDetectionTime = currentTime;
             }
