--- a/color_detection.html
+++ b/color_detection.html
@@ -185,7 +185,7 @@
       }
 
       video.addEventListener('play', () => {
-        function detectYellowLine() {
+        function detectOrangeLine() {
           const currentTime = Date.now();
           const elapsedTimeSinceLastDetection = currentTime - lastDetectionTime;
 
@@ -195,32 +195,32 @@
             const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
             const data = imageData.data;
             
-            let yellowLineDetected = false;
+            let orangeLineDetected = false;
             for (let i = 0; i < data.length; i += 4) {
               const red = data[i];
               const green = data[i + 1];
               const blue = data[i + 2];
               
-              // Check if the pixel is yellow
-              if (red > 200 && green > 200 && blue < 100) {
-                yellowLineDetected = true;
+              // Check if the pixel is orange
+              if (red > 230 && green > 100 && green < 200 && blue < 100) {
+                orangeLineDetected = true;
                 break;
               }
             }
 
-            if (yellowLineDetected) {
-              console.log('Yellow line detected');
+            if (orangeLineDetected) {
+              console.log('Orange line detected');
               playBeepSound();
-              const notificationText = 'CosmOS: Successfully detected a yellow line.';
+              const notificationText = 'CosmOS: Successfully detected an orange line.';
               showCustomNotification(notificationText);
               lastDetectionTime = currentTime;
             }
           }
 
-          requestAnimationFrame(detectYellowLine);
+          requestAnimationFrame(detectOrangeLine);
         }
 
-        detectYellowLine();
+        detectOrangeLine();
       });
     });
 
